# redline

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
app/: Package.swift
app/Sources/Redline/: App.swift  DashboardView.swift  Format.swift  Graph.swift  LoginItem.swift  Menu.swift  Models.swift  SessionTree.swift  Store.swift
assets/: ccwatch.icns
core/: Cargo.toml
core/src/: actions.rs  client.rs  config.rs  engine.rs  governor.rs  ipc.rs  leaks.rs  lib.rs  model.rs  pacer.rs  paths.rs  probe.py  remote.rs
core/src/collectors/: hooks.rs  mod.rs  processes.rs  sessions.rs  tasks.rs  transcripts.rs
core/tests/: engine_integration.rs  probe.rs
daemon/: Cargo.toml
daemon/src/: main.rs  remotes.rs  usage_bridge.rs
daemon/tests/: ipc.rs
docs/: gen-menubar-screenshot.py
docs/superpowers/plans/: 2026-07-10-cruise-control-advisory.md  2026-07-10-cruise-control-autonomous.md  2026-07-10-cruise-control-oneclick.md  2026-07-10-cruise-control-pacer.md
docs/superpowers/specs/: 2026-07-10-cruise-control-design.md
extension/: README.md  background.js  manifest.json  pack.sh  popup.html  popup.js
menubar/: Cargo.toml
menubar/src/: client.rs  graph.rs  main.rs  prefs.rs  summary.rs
tui/: Cargo.toml
tui/src/: app.rs  client.rs  format.rs  main.rs  ui.rs
