[package]
name = "ccwatch-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sysinfo = "0.33"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "5"
