[package]
name = "ccwatch-menubar"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ccwatch-menubar"
path = "src/main.rs"

[dependencies]
ccwatch-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(target_os = "macos")'.dependencies]
tray-icon = "0.19"
tao = "0.30"
