[package]
name = "ccwatch-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ccwatch"
path = "src/main.rs"

[dependencies]
ccwatch-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
ratatui = "0.29"
crossterm = "0.28"
fuzzy-matcher = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
